Fixed bug with static node equality setting in forward planning.